<resources>
    <string name="app_name">Blix-PhotosApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with_fb">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_email">Sign in with E-mail</string>
    <string name="don_t_have_account_sign_up">Don\'t have account? <b>Sign up</b></string>
    <string name="sign_up_privacy">By signing up, you agree to our terms and conditions</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password? <b>Reset password</b></string>
    <string name="sign_up">Sign up</string>
    <string name="e_mail">E-mail</string>
    <string name="username">Username</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="have_an_account_sign_in">Already have an account? <b>Sign in</b></string>
    <string name="reset_password">Reset password</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="menu_home">Home</string>
    <string name="menu_market">Market</string>
    <string name="menu_my_tickets">My Tickets</string>
    <string name="menu_profile">Profile</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="cart">Cart</string>
    <string name="total">Total</string>
    <string name="pay_now">Pay now</string>
</resources>