<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuHomeFragment"
        android:checked="true"
        android:enabled="true"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/menuMarketFragment"
        android:enabled="true"
        android:icon="@drawable/ic_menu_market"
        android:title="@string/menu_market" />
    <item
        android:id="@+id/menuMyTicketsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_menu_ticket"
        android:title="@string/menu_my_tickets" />
    <item
        android:id="@+id/menuProfileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_menu_profile"
        android:title="@string/menu_profile" />

</menu>