<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="isLast"
            type="boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/_16dp">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/introductionViewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_40dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_intro"
            app:layout_constraintHeight_percent="0.6"
            app:layout_constraintTop_toTopOf="parent" />

        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
            android:id="@+id/introductionDotsIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_24dp"
            app:dotsColor="@color/color_icon_unselected"
            app:dotsCornerRadius="8dp"
            app:dotsSize="10dp"
            app:dotsSpacing="4dp"
            app:dotsWidthFactor="2.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/introductionViewPager"
            app:progressMode="true"
            app:selectedDotColor="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_skip"
            style="@style/TextButtonStyle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="@dimen/_24dp"
            android:text="@string/skip"
            android:textSize="@dimen/_14sp"
            android:visibility="@{!isLast ? View.VISIBLE:View.GONE,default=visible}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_next"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            style="@style/MainButtonStyle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:text="@string/next"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sp"
            app:backgroundTint="@color/color_secondary_button"
            app:layout_constraintBottom_toBottomOf="@+id/btn_skip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_skip" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_start"
            style="@style/MainButtonStyle"
            android:layout_marginBottom="@dimen/_24dp"
            android:text="@string/get_started"
            android:visibility="@{isLast ? View.VISIBLE:View.GONE,default=gone}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>